Bug 150316 - FILESAVE: PPTX: Incorrect indent after RT
Summary: FILESAVE: PPTX: Incorrect indent after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2022-08-09 17:28 UTC by Xisco Faulí
Modified: 2023-10-25 09:11 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (13.15 KB, application/vnd.oasis.opendocument.presentation)
2022-08-09 17:28 UTC, Xisco Faulí
Details
Before vs After the RT (18.93 KB, image/png)
2022-08-09 17:28 UTC, Xisco Faulí
Details
The example file and its pptx version in current master (100.11 KB, image/png)
2023-08-19 12:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-08-09 17:28:00 UTC
Created attachment 181665 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save it to PPTX
3. Reopen

-> The line is shifted to the right. See comparison

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: cdf5b6a2a6f0ba2838323ce4398948c3d3a56f8e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (C); UI: en-US
Calc: threaded Jumbo

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-08-09 17:28:58 UTC
Created attachment 181666 [details]
Before vs After the RT
Comment 2 Xisco Faulí 2022-08-09 17:30:01 UTC
Regression introduced by:

author	Attila Bakos (NISZ) <bakos.attilakaroly@nisz.hu>	2022-05-26 17:04:54 +0200
committer	László Németh <nemeth@numbertext.org>	2022-05-31 13:00:38 +0200
commit 445d4ce232b8e8efaeb2605533fede1b71f52f30 (patch)
tree 4d9172a07ada471c2dd318ae70fcc03e48b8913b
parent b94275f6d2cb4dc28d1563fd7994251042b6d51a (diff)
tdf#147991 PPTX export: fix bullet indent regression

Bisected with: bibisect-linux64-7.4

Adding Cc: to Attila Bakos
Comment 3 Gabor Kelemen (Collabora) 2023-08-19 12:14:27 UTC
Created attachment 189038 [details]
The example file and its pptx version in current master

Still a problem in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34d32740d89876c3d4fd2743a07d6e2578601683
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

even after see also bug 151134 was fixed.

Here it seems the "First line indent" property value (-0,95 cm) is being lost with the RT.
Comment 4 Commit Notification 2023-08-25 18:51:02 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e042b1e26bedcc8d8bdcf105ec750b03665c7b0

tdf#150316 Fix missing first line indent in pptx export

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-10-25 09:11:54 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/23c2df654f11dac0d701d154bd16a35c3e11585e

tdf#150316 Fix missing first line indent in pptx export

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.